# kovi-plugin-acl

./: Cargo.toml  README.md
src/: api.rs  auth.rs  lib.rs  persist.rs  web.rs
src/cmd/: acl.rs  mod.rs  plugin.rs  system.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts
