[package]
name = "kovi-plugin-acl"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
kovi = { version = "0.12.7" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "fs"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
tower = "0.5"
tracing = "0.1"
sysinfo = "0.34"
include_dir = "0.7"
mime_guess = "2"